--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: xystat
-Version: 0.8
+Package: fdsamples
+Version: 0.3
 Date: 2013-09-27
-Title: Methods for x-y-data, such as time series, multivariate or functional data.
+Title: Methods for multivariate or functional data.
 Author: Ute Hahn <ute@imf.au.dk>
 Creator: Ute Hahn
 Maintainer: Ute Hahn <ute@imf.au.dk>
@@ -9,13 +9,14 @@ Depends:
     R (>= 2.15),
     plyr,
     stats
-Description: Nonparametric testing and visualization of data consisting of 
-    vectors or arrays of independent (x-) and a dependent (y-) variable, such as functional
-    data, time series or multivariate data (in the latter case, x is just an index).
+Description: Nonparametric testing and visualization of samples consisting of 
+    vectors or arrays of observations x(t) taken at the same given measurement points t, 
+    such as functional  data, time series or multivariate data 
+    (in the latter case, t is just an index).
     The independent variable may be multidimensional, but plotting is currently 
-    only possible for onedimensional x (time  series, functions of one variable).  
+    only possible for onedimensional arguments t (time series, functions of one variable).  
     Comparison of group means of the 
-    y-variable by a permutation test using a  studentized statistic that 
+    data by a permutation test using a  studentized statistic that 
     can be considered a simplified version of Hotelling's T-squared test 
     for two groups (currently, the number of groups is limited to two). 
 License: GPL (>= 2)
