--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,12 @@ Package: fdnonpar
 Version: 0.10.0
 Date: 2013-10-04
 Title: Methods for multivariate or functional data.
-Author: Ute Hahn <ute@imf.au.dk>
-Creator: Ute Hahn
-Maintainer: Ute Hahn <ute@imf.au.dk>
+Authors@R: 
+    person("Ute", "Hahn", email = "ute@imf.au.dk", role = c("aut", "cre"))
 Depends:
-    R (>= 2.15),
-    stats
+    R (>= 2.15)
 Imports:
+    plottools,
     plyr
 Description: Nonparametric testing and visualization of samples consisting of 
     vectors or arrays of observations x(t) taken at the same given measurement points t, 
