fdnonpar 0.12.1 accounts for changes in plottools / plutils: simplist instead of styles

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,13 @@
 .Rhistory
 # Example code in package build process
 *-Ex.R
-# Rstudio stuff
+# Rstudio stuff and Winedt hallØj
 .Rproj.user
 .Rhistory
 .RData
 .Rbuildignore
 *.Rproj
+*.prj
 #
 # backups
 #
