--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fdnonpar
-Version: 0.12.4
-Date: 2013-10-28
+Version: 0.12.4-2
+Date: 2013-10-30
 Title: Methods for multivariate or functional data.
 Authors@R: 
     person("Ute", "Hahn", email = "ute@imf.au.dk", role = c("aut", "cre"))
