--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: fdnonpar
-Version: 0.12.4-2
+Version: 0.12.5
 Date: 2013-10-30
 Title: Methods for multivariate or functional data.
 Authors@R: 
