--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fdnonpar
-Version: 0.13.3-3
-Date: 2013-11-18
+Version: 0.13.4
+Date: 2013-11-23
 Title: Methods for multivariate or functional data.
 Authors@R: 
     person("Ute", "Hahn", email = "ute@imf.au.dk", role = c("aut", "cre"))
