--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: fdnonpar
-Version: 0.14.2
+Version: 0.14.2-1
 Date: 2015-06-08
 Title: Methods for Multivariate or Functional Data
 Authors@R: 
